# SlicerMorph

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .slicerrc.py  Auto3DGM  CMakeLists.txt  FastModelAlign.py  LICENSE.md  README.md  SlicerMorphExtension.s4ext  index.html  run_acvd_atlas.py  run_gpa_atlas.py
.github/workflows/: claude-code-review.yml  claude.yml  lint.yml
ALPACA/: ALPACA.py  ALPACA_legacy.py  ALPACA_preview.py  CMakeLists.txt  LICENSE-ALPACA.txt  LICENSE-Open3D_utils.txt  Open3D_utils.py  README.md  installing.md
ALPACA/Resources/: requirements_ALPACA.txt
ALPACA/Support/: Open3D_utils.py
ALPACA/Templates/: logic_mixin.py  widget_mixin.py
ALPACAModelRegistration/: ALPACAModelRegistration.py
Animator/: Animator.py  CMakeLists.txt
Animator/AnimatorLib/: SceneSnapshot.py  SnapshotTimelineWidget.py  TransformAction.py  VolumePropertyKeyframes.py
Animator/Resources/: requirements.txt
Auto3dgm/: Auto3dgm.py  CMakeLists.txt  meshviewer.xml
Auto3dgm/auto3dgm_nazar/: .gitignore  LICENSE  README.md  SSmodifiedJulientestiDec20.py  app.py  requirements.txt
Auto3dgm/web_view_mesh/: view_segments.html
ConvertMorphologikaLandmarks/: CMakeLists.txt  ConvertMorphologikaLandmarks.py
CreateSemiLMPatches/: CMakeLists.txt  CreateSemiLMPatches.py
CreateSemiLMPatches/Testing/: SemiLandmarkBackup.py
Docs/ALPACA/: README.md  locating.md
Docs/Animator/: README.md
Docs/Auto3dgm/: README.md
Docs/CreateSemiLMPatches/: README.md
Docs/GEVolImport/: README.md
Docs/GPA/: README.md
Docs/IDAVLMConverter/: README.html  README.md
Docs/ImageStacks/: README.md
Docs/ImportFromURL/: README.html  README.md
Docs/MarkupEditor/: README.md
ExportAs/: CMakeLists.txt  ExportAs.py
ExportMorphoJLandmarkFile/: CMakeLists.txt  ExportMorphoJLandmarkFile.py
FastModelAlign/: CMakeLists.txt  FastModelAlign.py
FormatMarkups/: CMakeLists.txt  FormatMarkups.py
GEVolImport/: CMakeLists.txt  GEVolImport.py  README.md
GPA/: CMakeLists.txt  GPA.py  json_scratch.txt
HiResScreenCapture/: CMakeLists.txt  HiResScreenCapture.py  SlicerMorphViewerSize.py  readme.md
IDAVLMConverter/: CMakeLists.txt  IDAVLMConverter.py
ImageStacks/: CMakeLists.txt  ImageStacks.py
ImportFromURL/: CMakeLists.txt  ImportFromURL.py
ImportSurfaceToSegment/: CMakeLists.txt  ImportSurfaceToSegment.py
MEMOS/: CMakeLists.txt  MEMOS.py
MarkupEditor/: CMakeLists.txt  MarkupEditor.py
MarkupLink/: CMakeLists.txt  MarkupLink.py
MarkupsFcsv/: CMakeLists.txt  MarkupsFcsv.py
MergeCurves/: CMakeLists.txt  MergeCurves.py
MergeMarkups/: CMakeLists.txt  MergeMarkups.py
MeshDistanceMeasurement/: CMakeLists.txt  MeshDistanceMeasurement.py
ModelRegistration/: CMakeLists.txt  ModelRegistration.py
MorphPreferences/: CMakeLists.txt  MorphPreferences.py
MorphPreferences/Resources/: SM_VolumePresets.py  SM_presets.mrml  SM_presets.xml  SlicerMorphRC.py
MorphoSource/: CMakeLists.txt
MorphoSourceBrowse/: CMakeLists.txt  MorphoSourceBrowse.py
MorphoSourceImport/: CMakeLists.txt  MorphoSourceImport.py
MorphologikaLMConverter/: CMakeLists.txt  MorphologikaLMConverter.py
OBJFile/: CMakeLists.txt  OBJFile.py
PlaceLandmarkGrid/: CMakeLists.txt  PlaceLandmarkGrid.py
PlaceSemiLMPatches/: CMakeLists.txt  PlaceSemiLMPatches.py
ProjectSemiLM/: CMakeLists.txt  ProjectSemiLM.py
ProjectSemiLMPatches/: CMakeLists.txt  ProjectSemiLMPatches.py
PseudoLMGenerator/: CMakeLists.txt  PseudoLMGenerator.py
QuickAlign/: CMakeLists.txt  QuickAlign.py
ReadLandmarkFile/: CMakeLists.txt  ReadLandmarkFile.py
ResampleCurves/: CMakeLists.txt  ResampleCurves.py
SegmentEndocranium/: CMakeLists.txt  SegmentEndocranium.py
SemiLandmark/: CMakeLists.txt  CheckNormalScript  MeshDistanceMeasurement.py  SemiLandmark.py
SkyscanReconImport/: CMakeLists.txt  SkyscanReconImport.py
SlicerEditor/: CMakeLists.txt  SlicerEditor.py
SlicerMorphSampleData/: CMakeLists.txt  README.md  SlicerMorphExtension.s4ext  SlicerMorphSampleData.py
SphericalSampling/: CMakeLists.txt  SphericalSampling.py
SubmitVolumeRenderingPreset/: CMakeLists.txt  SubmitVolumeRenderingPreset.py
SurfaceResidualAnomalyDetector/: CMakeLists.txt  SurfaceResidualAnomalyDetector.py
TransferSemiLandmarks/: CMakeLists.txt  TransferSemiLandmarks.py
TransferSemiLandmarksWarp/: CMakeLists.txt  TransferSemiLandmarksWarp.py
Tutorials/: CMakeLists.txt  SlicerMorphTutorials.py
UIDevelopment/: CMakeLists.txt
UIDevelopment/Auto3dgm/: CMakeLists.txt  MorphoConvert.py
UIDevelopment/Downsample/: CMakeLists.txt
UIDevelopment/Downsample/DownsampleImageStack/: CMakeLists.txt  DownsampleImageStack.py
UIDevelopment/GPA/: BMP Toolbox Readme.txt  BMP_Toolbox_Manual.pptx  EdmaVis.py  Export Images Readme.txt  ExportImages.py  How to Link a Slicer Module.txt  Linking_a_Slicer_Module.pptx  Magalab_AdultMouse.ctbl  Module_notes.txt  Module_notes.txt~  bmp_toolbox.py  g_toolbox.py  gpa_lib.py  landmark_toolbox.py  load_landmarks.py  vis_toolbox.py
UIDevelopment/SampleScripts/: GPAscript.py  SegmentHistogram.py  ellipseScript.py  landmarkReaderScript.py  lollipopScript.py  resampleScript.py  segmentationScript.py
UIDevelopment/Segment/: CMakeLists.txt
UIDevelopment/Segment/SegmentPadSave/: SegmentPadSave.py
UIDevelopment/SegmentUI/Test2/SegmentPadSave/: CMakeLists.txt
UIDevelopment/SlicerMorph/: CMakeLists.txt  ConvertMorphologikaLandmarks.py  DownsampleImageStack.py  DownsampleImageStackFast.py  GPA.py  ImageImport.py  ImportSurfaceToSegment.py  SegmentPadSave.py  SkyscanReconImport.py  SlicerMorphSampleData.py
UIDevelopment/SlicerMorph/InProgress/: SegmentPadSave.py
UIDevelopment/SlicerMorph/MorphoSourcery/: CMakeLists.txt  MorphoSourcery.py
UIDevelopment/SlicerMorph/support/: gpa_lib.py
UIDevelopment/myGPA/: CMakeLists.txt  GPA.py  GPA_2.py  g_toolbox.py
VRPresetHub/: CMakeLists.txt  VRPresetHub.py
VRPresetShare/: CMakeLists.txt  VRPresetShare.py
ViewSync/: QuickAlign.py
VolumeToMesh/: CMakeLists.txt  VolumeToMesh.py
VolumeToModel/: CMakeLists.txt  VolumeToModel.py
meshviewer/: CMakeLists.txt  meshviewer.py
(+89 files in other folders)
